add weather, add gear recommend base on weather