@@ -18,6 +18,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -29,15 +30,17 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors(Customizer.withDefaults()) // ĐÃ THÊM: Bật tính năng CORS
+                .cors(Customizer.withDefaults())
                 .csrf(AbstractHttpConfigurer::disable)
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
+                        // ── Swagger / API docs ──────────────────────────────────
                         .requestMatchers(
                                 "/v3/api-docs/**",
                                 "/swagger-ui/**",
                                 "/swagger-ui.html"
                         ).permitAll()
+                        // ── Auth endpoints ──────────────────────────────────────
                         .requestMatchers(HttpMethod.POST,
                                 "/auth/register/request-otp",
                                 "/auth/register/verify",
@@ -46,22 +49,33 @@ public class SecurityConfig {
                                 "/auth/forgot-password",
                                 "/auth/reset-password").permitAll()
                         .requestMatchers(HttpMethod.GET, "/auth/me").authenticated()
+                        // ── Home / Locations / Attributes (public) ──────────────
                         .requestMatchers("/home/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/locations/**").permitAll()
                         .requestMatchers(HttpMethod.POST, "/locations/**").hasAnyRole("GUIDE", "ADMIN")
                         .requestMatchers(HttpMethod.GET, "/tour-attributes/**").permitAll()
                         .requestMatchers(HttpMethod.POST, "/tour-attributes/**").hasAnyRole("GUIDE", "ADMIN")
-                        .requestMatchers("/v1/payments/**", "/api/v1/payments/**").authenticated()
-                        .requestMatchers("/v1/bookings/**", "/api/v1/bookings/**").authenticated()
+                        // ── Tours (public) ──────────────────────────────────────
+                        .requestMatchers(HttpMethod.GET, "/tours/**").permitAll()
+                        // ── Reviews (GET public, POST authenticated) ────────────
+                        .requestMatchers(HttpMethod.GET, "/reviews/tour/**").permitAll()
+                        .requestMatchers("/reviews/**").authenticated()
+                        // ── Public rental equipment ─────────────────────────────
+                        .requestMatchers(HttpMethod.GET, "/v1/rental/equipments/**").permitAll()
+                        // ── Weather & AI (GET public — users need to view forecast) ─
+                        .requestMatchers(HttpMethod.GET, "/v1/weather/**").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/v1/weather/*/refresh").hasAnyRole("GUIDE", "ADMIN")
+                        // ── Bookings & Payments (authenticated) ────────────────
+                        .requestMatchers("/v1/bookings/**").authenticated()
+                        .requestMatchers("/v1/payments/**").authenticated()
+                        .requestMatchers(HttpMethod.GET,
+                                "/v1/payments/payos/confirm/**").permitAll()
+                        // ── Admin only ──────────────────────────────────────────
                         .requestMatchers("/admin/users/**").hasRole("ADMIN")
                         .requestMatchers("/admin/tours/**").hasAnyRole("GUIDE", "ADMIN")
                         .requestMatchers("/admin/tour-guides/**").hasAnyRole("GUIDE", "ADMIN")
-                        .requestMatchers(HttpMethod.GET, "/v1/rental/equipments/**").permitAll()
                         .requestMatchers("/admin/equipment/**").hasAnyRole("GUIDE", "ADMIN")
-                        .requestMatchers(HttpMethod.GET, "/tours/**").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/reviews/tour/**").permitAll()
-                        .requestMatchers("/reviews/**").authenticated()
-                        .requestMatchers(HttpMethod.GET, "/v1/payments/payos/confirm/**", "/api/v1/payments/payos/confirm/**").permitAll()
+                        // ── Default ─────────────────────────────────────────────
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
@@ -71,10 +85,15 @@ public class SecurityConfig {
         @Bean
         public CorsConfigurationSource corsConfigurationSource() {
                 CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://localhost:5173", "http://localhost:5174"));
+                configuration.setAllowedOrigins(Arrays.asList(
+                        "http://localhost:3000",
+                        "http://localhost:5173",
+                        "http://localhost:5174"
+                ));
                 configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-                configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-                configuration.setExposedHeaders(Arrays.asList("x-auth-token"));
+                // Cho phép tất cả headers (bao gồm Authorization, Content-Type, v.v.)
+                configuration.setAllowedHeaders(List.of("*"));
+                configuration.setExposedHeaders(Arrays.asList("Authorization", "x-auth-token"));
                 configuration.setAllowCredentials(true);
 
                 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -86,4 +105,4 @@ public class SecurityConfig {
         public PasswordEncoder passwordEncoder() {
                 return new BCryptPasswordEncoder();
         }
-}
+}
